# Messenger

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  client.cpp  client.hpp  install.sh  server.cpp  server.hpp  Диаграмма без названия.drawio
.github/workflows/: clang-format-check.yml  formatting-check.yml
client/include/: client.hpp
client/src/: client.cpp  main.cpp
common/include/: common.hpp
data/: db_config.sql
server/include/: database.hpp  server.hpp
server/src/: database.cpp  main.cpp  server.cpp
